--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "fakerphp/faker": "^1.14",
         "filp/whoops": "^2.0",
         "laravel/legacy-factories": "^1.1",
+        "lcobucci/jwt": "^5.2.0",
         "luthfi/simple-crud-generator": "^4.0",
         "mockery/mockery": "^1.0",
         "phpunit/phpunit": "^10.0"
