--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
           php-version: 8.1
           extensions: mbstring, bmath
       - name: Composer install
-        run: composer install
+        run: composer install --ignore-platform-reqs
       - name: Generate artisan key
         run: |
           cp .env.example .env
