--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
-        "buku-masjid/demo-data": "^1.0",
+        "buku-masjid/demo-data": "^1.1",
         "fakerphp/faker": "^1.14",
         "filp/whoops": "^2.0",
         "laravel/legacy-factories": "^1.1",
@@ -72,7 +72,8 @@
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "platform-check": false
     },
     "minimum-stability": "dev",
     "prefer-stable": true
