--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
         "postcss": "^8.1",
         "sass": "^1.32.8",
         "sass-loader": "8.*"
+    },
+    "dependencies": {
+        "jquery-datetimepicker": "^2.5.21"
     }
 }
