--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-APP_NAME="Buku Masjid"
+APP_NAME="e-Ramadhan"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:YHmCHz92ReL+PvI19qrImwAExe7jU0g0KrB6F37CLQU=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
-APP_TIMEZONE="Asia/Makassar"
+APP_TIMEZONE="Asia/Kuala_Lumpur"
 
 LOG_CHANNEL=stack
 
@@ -12,8 +12,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -47,7 +47,7 @@ MASJID_NAME="Masjid Ar-Rahman"
 MASJID_DEFAULT_BOOK_ID=1
 AUTH_DEFAULT_PASSWORD=password
 
-MONEY_CURRENCY_CODE="Rp"
+MONEY_CURRENCY_CODE="RM"
 MONEY_PRECISION=2
-MONEY_DECIMAL_SEPARATOR=","
-MONEY_THOUSANDS_SEPARATOR="."
+MONEY_DECIMAL_SEPARATOR="."
+MONEY_THOUSANDS_SEPARATOR=","
